// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test the <ParentComponent/> component using react-test-renderer it should deep render the parent component 1`] = `
<div>
  <div>
    Parent Component
  </div>
  <div>
    <div>
      Child Component
    </div>
  </div>
</div>
`;

exports[`test the <ParentComponent/> component using react-test-renderer it should deep render the parent component again 1`] = `
<div>
  <div>
    Parent Component
  </div>
  <div>
    <div>
      Child Component
    </div>
  </div>
</div>
`;

exports[`test the <ParentComponent/> component using react-test-renderer test the <ParentComponent/> component with stubbing it should shallow render the parent component 1`] = `
<div>
  <div>
    Parent Component
  </div>
  <div />
</div>
`;

exports[`test the <ParentComponent/> component using react-testing-library it should deep render the parent component 1`] = `
<div>
  <div>
    Parent Component
  </div>
  <div>
    <div>
      Child Component
    </div>
  </div>
</div>
`;

exports[`test the <ParentComponent/> component using react-testing-library test the <ParentComponent/> component with stubbing it should shallow render the parent component again 1`] = `
<div>
  <div>
    Parent Component
  </div>
  <div />
</div>
`;
